Upgraded the project to Maven, and Created another interface for Fake Data Extraction (#7)